# Binaural

./: README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/audio/: engine.ts
src/components/: ActivityCard.tsx  BinauralPlayer.tsx  Icon.tsx  RecommendationCard.tsx  Sidebar.tsx  TimerControls.tsx
src/data/: activities.ts  recommendations.ts
src/hooks/: useStore.ts
src/pages/: ActivityPage.tsx  FavoritesPage.tsx  HomePage.tsx  SettingsPage.tsx
src/types/: index.ts
