[package]
name = "binaural-finder"
version = "0.1.0"
description = "Binaural Finder for macOS"
authors = []
edition = "2021"

[lib]
name = "binaural_finder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "binaural-finder"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
